# eoshuffle

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  Readme.md  index.js  package-lock.json  package.json
src/: compiler.sh  creator.js  deployer.js
src/cmds/: compile.js  create.js  deploy.js  setup.js  test.js  unbox.js
src/lib/: eosHelper.js  errors.js  fileHelper.js  index.js  logger.js  validateConfig.js
src/templates/coin/: eoshuffle.js
src/templates/coin/contracts/: coin.cpp
